--- a/src/components/Layout/Header.module.css
+++ b/src/components/Layout/Header.module.css
@@ -4,14 +4,23 @@
   left: 0;
   width: 100%;
   height: 5rem;
-  background-color: #8a2b06;
-  color: white;
+  background-color: black;
+  /* color: white; */
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0 10%;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
   z-index: 10;
+}
+
+.logoImg {
+  position: absolute;
+  left: 10px;
+  top: -20px;
+  margin: 0px 15px 15px 0px;
+  width: 120px;
+  height: 120px;
 }
 
 .main-image {
@@ -26,4 +35,64 @@
   height: 100%;
   object-fit: cover;
   transform: rotateZ(-5deg) translateY(-4rem) translateX(-1rem);
+}
+
+nav ul {
+  list-style: none;
+  /* background-color: #444; */
+  text-align: center;
+  padding: 0;
+  margin: 0;
+}
+nav li {
+  font-family: "Oswald", sans-serif;
+  font-size: 1.2em;
+  line-height: 320px;
+  height: 40px;
+  border-bottom: 1px solid #888;
+}
+
+nav a {
+  text-decoration: none;
+  color: burlywood;
+  display: block;
+  transition: 0.3s background-color;
+}
+
+nav a:hover {
+  background-color: blueviolet;
+}
+
+nav a.active {
+  background-color: #fff;
+  color: #444;
+  cursor: default;
+}
+
+@media screen and (min-width: 600px) {
+  nav li {
+    width: 220px;
+    border-bottom: none;
+    height: 50px;
+    line-height: 50px;
+    font-size: 1.0em;
+  }
+
+  /* Option 1 - Display Inline */
+  nav li {
+    display: inline-block;
+    margin-right: -4px;
+  }
+
+  /* nav li {
+    float: left;
+  }
+  nav ul {
+    overflow: auto;
+    width: 600px;
+    margin: 0 auto;
+  }
+  nav {
+    background-color: #444;
+  } */
 }
